# rubix-sweeper

./: .copier-answers.yml  Cargo.toml
src/: assets.rs  interaction.rs  main.rs  settings.rs
src/cube/: create.rs  cube_data.rs  mod.rs  turn.rs
