[package]
name = "rubix_sweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.14", features=["dynamic_linking", "wayland"]}
bevy-inspector-egui = {version="0.25", optional=true}
bevy_embedded_assets = { version = "0.11", optional=true}
bevy_asset_loader = "0.21" 
bevy_tween = "0.6"
bevy_mod_picking = {version="0.20", default-features=false, features=["backend_raycast"]}

[features]
dev = ["dep:bevy-inspector-egui"]
fast_compile = ["bevy/dynamic_linking"]
release = ["dep:bevy_embedded_assets"]

web = [
    "bevy/webgl2",
]
non_web = []
default = ["non_web"] 

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false


